--- a/Images/Images/Storyboards/ImageCollectionViewController.storyboard
+++ b/Images/Images/Storyboards/ImageCollectionViewController.storyboard
@@ -18,29 +18,28 @@
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                         <collectionViewFlowLayout key="collectionViewLayout" scrollDirection="horizontal" minimumLineSpacing="10" minimumInteritemSpacing="10" id="MBE-B0-m9c">
-                            <size key="itemSize" width="291" height="139"/>
+                            <size key="itemSize" width="300" height="165"/>
                             <size key="headerReferenceSize" width="0.0" height="0.0"/>
                             <size key="footerReferenceSize" width="0.0" height="0.0"/>
                             <inset key="sectionInset" minX="0.0" minY="0.0" maxX="0.0" maxY="0.0"/>
                         </collectionViewFlowLayout>
                         <cells>
-                            <collectionViewCell opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleAspectFill" misplaced="YES" reuseIdentifier="imageCollectionView" id="nvR-CH-ANp" customClass="ImageCollectionViewCell" customModule="Images" customModuleProvider="target">
-                                <rect key="frame" x="0.0" y="18.5" width="291" height="139"/>
+                            <collectionViewCell opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleAspectFill" reuseIdentifier="imageCollectionView" id="nvR-CH-ANp" customClass="ImageCollectionViewCell" customModule="Images" customModuleProvider="target">
+                                <rect key="frame" x="0.0" y="5.5" width="300" height="165"/>
                                 <autoresizingMask key="autoresizingMask"/>
                                 <view key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" insetsLayoutMarginsFromSafeArea="NO">
-                                    <rect key="frame" x="0.0" y="0.0" width="291" height="139"/>
+                                    <rect key="frame" x="0.0" y="0.0" width="300" height="165"/>
                                     <autoresizingMask key="autoresizingMask"/>
                                     <subviews>
-                                        <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" placeholderIntrinsicWidth="258" placeholderIntrinsicHeight="119" translatesAutoresizingMaskIntoConstraints="NO" id="aY2-ec-WB0">
-                                            <rect key="frame" x="15" y="15" width="261" height="119"/>
+                                        <imageView userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" placeholderIntrinsicWidth="277" placeholderIntrinsicHeight="140" translatesAutoresizingMaskIntoConstraints="NO" id="aY2-ec-WB0">
+                                            <rect key="frame" x="8" y="16" width="276" height="141"/>
                                         </imageView>
-                                        <activityIndicatorView hidden="YES" opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="750" verticalHuggingPriority="750" fixedFrame="YES" hidesWhenStopped="YES" style="whiteLarge" translatesAutoresizingMaskIntoConstraints="NO" id="MMV-n2-aI5">
-                                            <rect key="frame" x="127" y="56" width="37" height="37"/>
-                                            <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                        <activityIndicatorView hidden="YES" opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="750" verticalHuggingPriority="750" hidesWhenStopped="YES" style="whiteLarge" translatesAutoresizingMaskIntoConstraints="NO" id="MMV-n2-aI5">
+                                            <rect key="frame" x="127.5" y="68" width="37" height="37"/>
                                             <color key="color" name="selectedKnobColor" catalog="System" colorSpace="catalog"/>
                                         </activityIndicatorView>
                                         <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Vy0-xe-M5P">
-                                            <rect key="frame" x="261" y="0.0" width="30" height="30"/>
+                                            <rect key="frame" x="269" y="1" width="30" height="30"/>
                                             <state key="normal" title="❌">
                                                 <color key="titleColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                                 <color key="titleShadowColor" white="0.66666666666666663" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
@@ -52,11 +51,14 @@
                                     </subviews>
                                 </view>
                                 <constraints>
-                                    <constraint firstItem="aY2-ec-WB0" firstAttribute="top" secondItem="nvR-CH-ANp" secondAttribute="top" constant="15" id="1Dd-85-ek9"/>
-                                    <constraint firstItem="aY2-ec-WB0" firstAttribute="leading" secondItem="nvR-CH-ANp" secondAttribute="leading" constant="15" id="93r-b7-aqA"/>
-                                    <constraint firstAttribute="trailing" secondItem="aY2-ec-WB0" secondAttribute="trailing" constant="15" id="JPF-JM-0ab"/>
-                                    <constraint firstItem="Vy0-xe-M5P" firstAttribute="top" secondItem="nvR-CH-ANp" secondAttribute="top" id="ZJ5-nd-84I"/>
-                                    <constraint firstAttribute="trailing" secondItem="Vy0-xe-M5P" secondAttribute="trailing" id="v33-zT-Dze"/>
+                                    <constraint firstItem="aY2-ec-WB0" firstAttribute="top" secondItem="nvR-CH-ANp" secondAttribute="top" constant="16" id="1Dd-85-ek9"/>
+                                    <constraint firstItem="aY2-ec-WB0" firstAttribute="leading" secondItem="nvR-CH-ANp" secondAttribute="leading" constant="8" id="93r-b7-aqA"/>
+                                    <constraint firstAttribute="trailing" secondItem="aY2-ec-WB0" secondAttribute="trailing" constant="16" id="JPF-JM-0ab"/>
+                                    <constraint firstAttribute="bottom" secondItem="aY2-ec-WB0" secondAttribute="bottom" constant="8" id="bNh-8I-4i8"/>
+                                    <constraint firstItem="aY2-ec-WB0" firstAttribute="trailing" secondItem="Vy0-xe-M5P" secondAttribute="trailing" constant="-15" id="fzB-eR-c4p"/>
+                                    <constraint firstItem="MMV-n2-aI5" firstAttribute="centerY" secondItem="aY2-ec-WB0" secondAttribute="centerY" id="onb-Vm-WDg"/>
+                                    <constraint firstItem="Vy0-xe-M5P" firstAttribute="top" secondItem="aY2-ec-WB0" secondAttribute="top" constant="-15" id="qSZ-gz-aqg"/>
+                                    <constraint firstItem="MMV-n2-aI5" firstAttribute="centerX" secondItem="aY2-ec-WB0" secondAttribute="centerX" id="vVZ-RW-L9a"/>
                                 </constraints>
                                 <connections>
                                     <outlet property="pictureImageView" destination="aY2-ec-WB0" id="4d6-cp-bSJ"/>
