--- a/Images/Images/XIBs/CustomSectionHeaderView.xib
+++ b/Images/Images/XIBs/CustomSectionHeaderView.xib
@@ -12,16 +12,10 @@
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner"/>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
-        <view contentMode="scaleToFill" id="iN0-l3-epB" customClass="CustomSectionHeaderView" customModule="Images" customModuleProvider="target">
+        <view contentMode="scaleToFill" id="iN0-l3-epB" customClass="CustomSectionHeaderView" customModule="Images___iOS_Application" customModuleProvider="target">
             <rect key="frame" x="0.0" y="0.0" width="375" height="80"/>
             <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
             <subviews>
-                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="6Aj-QG-jEY">
-                    <rect key="frame" x="163" y="38" width="51" height="24"/>
-                    <fontDescription key="fontDescription" type="system" weight="semibold" pointSize="20"/>
-                    <color key="textColor" name="selectedKnobColor" catalog="System" colorSpace="catalog"/>
-                    <nil key="highlightedColor"/>
-                </label>
                 <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="R03-YX-wwm">
                     <rect key="frame" x="0.0" y="0.0" width="375" height="24"/>
                     <color key="backgroundColor" name="knobColor" catalog="System" colorSpace="catalog"/>
@@ -36,17 +30,35 @@
                         <constraint firstAttribute="height" constant="1" id="Dph-L4-g2E"/>
                     </constraints>
                 </view>
+                <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="oK5-H1-avN">
+                    <rect key="frame" x="0.0" y="24" width="375" height="55"/>
+                    <subviews>
+                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="6Aj-QG-jEY">
+                            <rect key="frame" x="162" y="15.5" width="51" height="24"/>
+                            <fontDescription key="fontDescription" type="system" weight="semibold" pointSize="20"/>
+                            <color key="textColor" name="selectedKnobColor" catalog="System" colorSpace="catalog"/>
+                            <nil key="highlightedColor"/>
+                        </label>
+                    </subviews>
+                    <color key="backgroundColor" red="0.83807416820000002" green="0.8983499693" blue="0.92145264149999995" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                    <constraints>
+                        <constraint firstItem="6Aj-QG-jEY" firstAttribute="centerY" secondItem="oK5-H1-avN" secondAttribute="centerY" id="SkQ-aA-esO"/>
+                        <constraint firstItem="6Aj-QG-jEY" firstAttribute="centerX" secondItem="oK5-H1-avN" secondAttribute="centerX" id="sag-qC-IfK"/>
+                    </constraints>
+                </view>
             </subviews>
-            <color key="backgroundColor" red="0.83807416820000002" green="0.8983499693" blue="0.92145264149999995" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+            <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
             <constraints>
+                <constraint firstItem="oK5-H1-avN" firstAttribute="trailing" secondItem="vUN-kp-3ea" secondAttribute="trailing" id="0ZV-ZL-Wb3"/>
+                <constraint firstItem="oK5-H1-avN" firstAttribute="leading" secondItem="vUN-kp-3ea" secondAttribute="leading" id="5dM-aJ-ose"/>
                 <constraint firstItem="vUN-kp-3ea" firstAttribute="trailing" secondItem="R03-YX-wwm" secondAttribute="trailing" id="9jB-5e-KoR"/>
-                <constraint firstItem="6Aj-QG-jEY" firstAttribute="top" secondItem="R03-YX-wwm" secondAttribute="bottom" constant="14" id="FS6-jr-kjL"/>
+                <constraint firstItem="oK5-H1-avN" firstAttribute="top" secondItem="R03-YX-wwm" secondAttribute="bottom" id="IMS-Ps-Hj5"/>
                 <constraint firstItem="FCn-LQ-Vqg" firstAttribute="bottom" secondItem="vUN-kp-3ea" secondAttribute="bottom" id="TAb-S9-qcr"/>
                 <constraint firstItem="FCn-LQ-Vqg" firstAttribute="leading" secondItem="vUN-kp-3ea" secondAttribute="leading" id="Tns-US-Rb3"/>
                 <constraint firstItem="R03-YX-wwm" firstAttribute="top" secondItem="vUN-kp-3ea" secondAttribute="top" id="UWF-8e-5QQ"/>
                 <constraint firstItem="FCn-LQ-Vqg" firstAttribute="trailing" secondItem="vUN-kp-3ea" secondAttribute="trailing" id="VM9-5Q-kNg"/>
                 <constraint firstItem="R03-YX-wwm" firstAttribute="leading" secondItem="vUN-kp-3ea" secondAttribute="leading" id="ae3-cZ-Yme"/>
-                <constraint firstItem="6Aj-QG-jEY" firstAttribute="centerX" secondItem="vUN-kp-3ea" secondAttribute="centerX" constant="1" id="r8i-NT-0h0"/>
+                <constraint firstItem="FCn-LQ-Vqg" firstAttribute="top" secondItem="oK5-H1-avN" secondAttribute="bottom" id="pIn-BL-tGl"/>
             </constraints>
             <nil key="simulatedTopBarMetrics"/>
             <nil key="simulatedBottomBarMetrics"/>
@@ -55,7 +67,7 @@
             <connections>
                 <outlet property="titleLabel" destination="6Aj-QG-jEY" id="gSu-I5-qs7"/>
             </connections>
-            <point key="canvasLocation" x="25.5" y="52"/>
+            <point key="canvasLocation" x="24.800000000000001" y="51.27436281859071"/>
         </view>
     </objects>
 </document>
